# ggml-easy

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  convert_safetensors_to_gguf.py  demo.cpp  ggml-easy.h  ggml-easy.hpp
demo/: 2d-rope.cpp  autoencoder.cpp  basic.cpp  dyt-rms.cpp  fastvlm.cpp  kyutai-mimi.cpp  mobilenetv5.cpp  random.cpp  safetensors.cpp  svd.cpp  ultravox-encoder.cpp  whisper-encoder.cpp
models/: whisper-mel-filters.gguf
